# autogentest1

./: .env.example  .gitignore  README.md  pyproject.toml
academic/: academic_paper_draft.md  paper_data_needs.md
data/rag/: news_archive.json
docs/: ANALYSIS.md
docs/requirements/: requirements_inventory.md  risk_analytics_api_design.md
docs/workflows/: audit_logging.md  backtest_parameter_sweep.md  hard_gate_configuration_checklist.md  risk_gate_flow.md
mtr/12.2/: 技术优化提案：AutoGen 智能体交易系统增强方案.md  技术提案：行情数据获取层的高可用性改造方案.md
mtr/12.5/: analysis.md
scripts/: fetch_historical_news.py  import_news_csv.py
src/autogentest1/: main.py
src/autogentest1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/autogentest1/agents/: admin_agent.py  base.py  compliance_agent.py  data_agent.py  fundamental_agent.py  macro_agent.py  quant_agent.py  risk_agent.py  scribe_agent.py  settlement_agent.py  strategy_agent.py  supervisor_agent.py  tech_agent.py
src/autogentest1/config/: dump_settings.py  settings.py
src/autogentest1/outputs/: sentiment_history.json
src/autogentest1/services/: audit.py  backtest.py  backtest_suite.py  circuit_breaker.py  exceptions.py  market_data.py  news_ingest.py  news_watcher.py  risk.py  risk_gate.py  sentiment.py  state.py
src/autogentest1/tools/: __init__.py  backtest_tools.py  risk_tools.py
src/autogentest1/ui/: gui.py
tests/: test_backtest_suite.py  test_circuit_breaker.py  test_historical_news_backtest.py  test_rag.py  test_risk.py  test_risk_gate.py  test_risk_tools.py  test_settings.py  test_state.py
(+8 files in other folders)
